cabal-version:      2.4
name:               redblack
version:            0.1.0.0
synopsis:           Type-level red-black trees
license:            BSD-3-Clause
author:             Edsko de Vries
maintainer:         edsko@well-typed.com

library
  exposed-modules:
      RedBlackTree
      Util.Promotion
      Util.Singleton
  build-depends:
      base
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  ghc-options:
      -Wall

test-suite test-large-records
  type:
      exitcode-stdio-1.0
  main-is:
      TestRedBlack.hs
  other-modules:
      Test.RedBlackTree
  build-depends:
      base
    , redblack
    , containers
    , tasty
    , tasty-quickcheck
  hs-source-dirs:
      test
  default-language:
      Haskell2010
  ghc-options:
      -Wall
